--- a/app/src/main/res/layout/activity_gamemode.xml
+++ b/app/src/main/res/layout/activity_gamemode.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_gamemode"
     android:layout_width="match_parent"
@@ -19,11 +20,11 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:background="@drawable/button_style"
-        android:onClick="switchtodifficulty"
-        android:text="icons"
         android:textAlignment="center"
         android:textColor="#ffffff"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:text="Icons"
+        android:onClick="onIconsBtnPressed" />
 
     <Button
         android:id="@+id/button10"
@@ -36,7 +37,8 @@
         android:onClick="switchtodifficulty"
         android:text="pictures"
         android:textColor="#ffffff"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/textView"
@@ -54,14 +56,13 @@
         android:id="@+id/btn_colors"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="80dp"
         android:background="@drawable/button_style"
         android:onClick="OnColorsBtnPressed"
-        android:text="colors"
         android:textColor="#ffffff"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:text="Colors"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
