--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -36,39 +36,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.44"
-                android:text="1:00"
+                android:text="30"
                 android:textColor="@color/common_google_signin_btn_text_light_focused" />
 
             <TextView
                 android:id="@+id/lifetextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.23"
+                android:layout_weight="2.17"
                 android:text="Lifes"
                 android:textColor="@color/common_google_signin_btn_text_light_focused" />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="0.19"
-                android:contentDescription=""
-                app:srcCompat="@android:drawable/ic_input_add" />
-
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:contentDescription=""
-                app:srcCompat="@android:drawable/ic_input_add" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="0.25"
-                android:contentDescription=""
-                app:srcCompat="@android:drawable/ic_input_add" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -79,9 +56,8 @@
 
             <TextView
                 android:id="@+id/gamescore"
-                android:layout_width="wrap_content"
+                android:layout_width="29dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.48"
                 android:text="0"
                 android:textColor="@color/common_google_signin_btn_text_light_focused" />
 
