--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,25 +43,11 @@
         android:textSize="15sp" />
 
 
-    <Button
-        android:id="@+id/btn_new_game"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="118dp"
-        android:background="@drawable/button_style"
-        android:onClick="OnNewGamePressed"
-        android:text="@string/new_game_button_txt"
-        android:textColor="#ffffff"
-        android:textSize="25sp" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="47dp"
+        android:layout_marginTop="71dp"
         android:fontFamily="cursive"
         android:text="@string/logo_text"
         android:textAlignment="center"
@@ -70,6 +56,19 @@
         android:textSize="80sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/btn_new_game"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_style"
+        android:onClick="OnNewGamePressed"
+        android:text="@string/new_game_button_txt"
+        android:textColor="#ffffff"
+        android:textSize="25sp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
