--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -61,7 +61,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="10dp"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:onClick="onBackToMenuPressed" />
 
     <TextView
         android:text="0"
