--- a/app/src/main/res/layout/activity_gamemode.xml
+++ b/app/src/main/res/layout/activity_gamemode.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/colorsbutton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/button_style"
         android:textAlignment="center"
         android:textColor="#ffffff"
@@ -61,8 +61,9 @@
         android:textColor="#ffffff"
         android:textSize="25sp"
         android:text="Colors"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="102dp" />
 
 </RelativeLayout>
