--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,21 +13,6 @@
 
 
     <Button
-        android:id="@+id/btn_scores"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/btn_new_game"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/button_style"
-        android:onClick="OnScoresPressed"
-        android:text="@string/scores_button_txt"
-        android:textColor="#ffffff"
-        android:textSize="25sp" />
-
-    <Button
         android:id="@+id/btn_playername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,6 +54,20 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/btn_scores"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_style"
+        android:onClick="OnScoresPressed"
+        android:text="@string/scores_button_txt"
+        android:textColor="#ffffff"
+        android:textSize="25sp"
+        android:layout_below="@+id/btn_new_game"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
 
 
 </RelativeLayout>
