--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -12,39 +12,77 @@
     tools:context="com.example.uidp0609.testapp.scoresActivity">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="71dp"
-        android:text="Scores"
+        android:text="Score"
         android:textColor="@android:color/white"
         android:textSize="70sp" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/scoretextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="79dp"
-        android:text="Player 1  50"
+        android:layout_marginTop="84dp"
+        android:text="0"
         android:textColor="@android:color/white"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:layout_below="@+id/textView5"
+        android:layout_centerHorizontal="true" />
 
-    <Button
-        android:id="@+id/btn_back"
+    <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="54dp"
+        android:text="Best"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:background="@drawable/button_style"
-        android:onClick="switchtohome"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:text="back"
-        android:textColor="@android:color/white" />
+        android:layout_alignParentEnd="true"
+        android:weightSum="3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:id="@+id/buttondeletehighscore"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/button_style"
+            android:onClick="deletehighscore"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="delete highscore"
+            android:textColor="@android:color/white"
+            android:layout_marginRight="10dp"
+            android:layout_weight="2"
+            android:layout_width="wrap_content" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/button_style"
+            android:onClick="switchtohome"
+            android:text="back"
+            android:textColor="@android:color/white"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
 </RelativeLayout>
