--- a/app/src/main/res/layout/activity_difficulty.xml
+++ b/app/src/main/res/layout/activity_difficulty.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.uidp0609.testapp.difficultyActivity">
+    tools:context="com.ellophantdesign.haayhappen.Buttons.difficultyActivity">
 
     <Button
         android:id="@+id/button4"
