--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.uidp0609.testapp.gameOverActivity"
+    tools:context="com.ellophantdesign.haayhappen.Buttons.gameOverActivity"
     android:background="@drawable/gradient_background">
 
     <TextView
