--- a/app/src/main/res/layout/activity_gamemode.xml
+++ b/app/src/main/res/layout/activity_gamemode.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.uidp0609.testapp.gamemodeActivity">
+    tools:context="com.ellophantdesign.haayhappen.Buttons.gamemodeActivity">
 
     <Button
         android:id="@+id/iconsbutton"
