--- a/app/src/main/res/layout/activity_gamemode.xml
+++ b/app/src/main/res/layout/activity_gamemode.xml
@@ -23,34 +23,8 @@
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="25sp"
-        android:text="Icons"
-        android:onClick="onIconsBtnPressed" />
-
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iconsbutton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/button_style"
-        android:onClick="switchtodifficulty"
-        android:text="pictures"
-        android:textColor="#ffffff"
-        android:textSize="25sp"
-        android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:text="@string/choose_gamemode_txt"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="35sp" />
+        android:text="Buy Icons"
+        android:onClick="buyClick" />
 
     <Button
         android:id="@+id/colorsbutton"
@@ -64,6 +38,17 @@
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="102dp" />
+        android:layout_marginTop="100dp" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:text="@string/choose_gamemode_txt"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="35sp" />
 </RelativeLayout>
