--- a/app/src/main/res/layout/activity_gamemode.xml
+++ b/app/src/main/res/layout/activity_gamemode.xml
@@ -13,7 +13,7 @@
     tools:context="com.ellophantdesign.haayhappen.Buttons.gamemodeActivity">
 
     <Button
-        android:id="@+id/iconsbutton"
+        android:id="@+id/iconsbuybutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/colorsbutton"
@@ -25,6 +25,20 @@
         android:textSize="25sp"
         android:text="Buy Icons"
         android:onClick="buyClick" />
+
+    <Button
+        android:id="@+id/Icons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/colorsbutton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/button_style"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="25sp"
+        android:text="Buy Icons"
+        android:onClick="onIconButtonClicked" />
 
     <Button
         android:id="@+id/colorsbutton"
@@ -51,4 +65,20 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="35sp" />
+
+    <Button
+        android:text="Please wait!"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:id="@+id/screen_wait"
+        android:background="@android:color/white"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="56dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:clickable="false"
+        android:visibility="gone" />
+
 </RelativeLayout>
