--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -29,7 +29,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.49"
                 android:text="Time:"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/timerTextView"
@@ -37,7 +38,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.53"
                 android:text="30"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/lifetextview"
@@ -45,7 +47,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.27"
                 android:text="Lifes"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/lifestextview"
@@ -53,21 +56,24 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.37"
                 android:text="3"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.67"
                 android:text="Score:"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/gamescore"
                 android:layout_width="29dp"
                 android:layout_height="wrap_content"
                 android:text="0"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp" />
 
         </LinearLayout>
 
