--- a/app/src/main/res/layout/activity_icongame.xml
+++ b/app/src/main/res/layout/activity_icongame.xml
@@ -18,9 +18,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="4">
+            android:weightSum="4"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tv_time"
@@ -28,7 +28,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.49"
                 android:text="Time:"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/timerTextView"
@@ -36,7 +37,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.53"
                 android:text="30"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/lifetextview"
@@ -44,29 +46,32 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.27"
                 android:text="Lifes"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/lifestextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.37"
                 android:text="3"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp"
+                android:layout_weight="0.51" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.67"
                 android:text="Score:"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/gamescore"
-                android:layout_width="29dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
-                android:textColor="@color/common_google_signin_btn_text_light_focused" />
+                android:textColor="@color/common_google_signin_btn_text_light_focused"
+                android:textSize="30sp" />
 
         </LinearLayout>
 
@@ -75,35 +80,35 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:background="@color/colorBlue" />
+            android:background="@android:color/white" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
             android:orientation="horizontal"
-            android:weightSum="4">
+            android:weightSum="4"
+            android:layout_height="100dp">
 
             <Button
                 android:id="@+id/btn_red"
-                android:layout_width="96dp"
-                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@android:drawable/ic_delete" />
+                android:background="@drawable/ic_hamburger"
+                android:layout_width="100sp"
+                android:layout_height="100sp" />
 
             <Button
                 android:id="@+id/btn_green"
-                android:layout_width="96dp"
-                android:layout_height="match_parent"
+                android:layout_height="100sp"
                 android:layout_weight="1"
-                android:background="@color/colorGreen"
-                android:onClick="onGreenPressed" />
+                android:background="@drawable/ic_lettuce"
+                android:onClick="onGreenPressed"
+                android:layout_width="100sp" />
 
             <Button
                 android:id="@+id/btn_beige"
                 android:layout_width="96dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorBeige"
+                android:background="@drawable/ic_fried_egg"
                 android:onClick="onBeigePressed" />
 
             <Button
@@ -111,7 +116,7 @@
                 android:layout_width="96dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorYellow"
+                android:background="@drawable/ic_cupcake"
                 android:onClick="onYellowPressed" />
         </LinearLayout>
 
@@ -136,9 +141,9 @@
         android:layout_below="@+id/textview_instructions"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:background="@drawable/button_style"
+        android:background="@drawable/grey_button_style"
         android:padding="20dp"
         android:text="Start Game!"
-        android:textColor="#ffffff" />
+        android:textColor="@color/common_google_signin_btn_text_light_default" />
 
 </RelativeLayout>
