--- a/app/src/main/res/layout/activity_gamemode.xml
+++ b/app/src/main/res/layout/activity_gamemode.xml
@@ -37,8 +37,9 @@
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="25sp"
-        android:text="Buy Icons"
-        android:onClick="onIconButtonClicked" />
+        android:text="Icons"
+        android:onClick="onIconButtonClicked"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/colorsbutton"
@@ -93,6 +94,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="onTestClicked" />
+        android:onClick="onTestClicked"
+        android:visibility="gone" />
 
 </RelativeLayout>
