--- a/app/src/main/res/layout/activity_gamemode.xml
+++ b/app/src/main/res/layout/activity_gamemode.xml
@@ -18,12 +18,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/colorsbutton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/button_style"
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="25sp"
-        android:text="Buy Icons"
+        android:text="Try Icons!"
         android:onClick="buyClick" />
 
     <Button
@@ -53,7 +53,7 @@
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="100dp" />
+        android:layout_marginTop="110dp" />
 
     <TextView
         android:id="@+id/textView"
