--- a/app/src/main/res/layout/activity_gamemode.xml
+++ b/app/src/main/res/layout/activity_gamemode.xml
@@ -55,20 +55,6 @@
         android:layout_marginTop="10dp" />
 
     <Button
-        android:id="@+id/Icons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_style"
-        android:textAlignment="center"
-        android:textColor="#ffffff"
-        android:textSize="25sp"
-        android:text="@string/icons_gamemode"
-        android:onClick="onIconButtonClicked"
-        android:visibility="gone"
-        android:layout_alignParentLeft="true"
-        tools:ignore="RtlHardcoded" />
-
-    <Button
         android:id="@+id/Pokemons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -92,6 +78,22 @@
         android:textSize="25sp"
         android:text="@string/colors_gamemode"
         android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/Icons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_style"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="25sp"
+        android:text="@string/icons_gamemode"
+        android:onClick="onIconButtonClicked"
+        android:visibility="gone"
+        android:layout_alignBaseline="@+id/iconsbuybutton"
+        android:layout_alignBottom="@+id/iconsbuybutton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
