--- a/app/src/main/res/layout-small/activity_game.xml
+++ b/app/src/main/res/layout-small/activity_game.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_game"
     android:layout_width="match_parent"
@@ -18,62 +19,62 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="4"
-            android:layout_height="wrap_content">
+            android:weightSum="4">
 
             <TextView
                 android:id="@+id/tv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.69"
+                android:layout_weight="0.49"
                 android:text="Time:"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:textSize="40sp" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/timerTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.07"
+                android:layout_weight="1.53"
                 android:text="30"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:textSize="40sp" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/lifetextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.27"
                 android:text="Lifes"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:textSize="40sp"
-                android:layout_weight="0.39" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/lifestextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.38"
                 android:text="3"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:textSize="40sp"
-                android:layout_weight="0.49" />
+                android:textSize="10sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.67"
                 android:text="Score:"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:textSize="40sp"
-                android:layout_weight="0.46" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/gamescore"
-                android:layout_width="wrap_content"
+                android:layout_width="29dp"
                 android:layout_height="wrap_content"
                 android:text="0"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:textSize="40sp"
-                android:layout_weight="1.08" />
+                android:textSize="10sp"
+                android:layout_weight="0.82" />
 
         </LinearLayout>
 
@@ -82,87 +83,74 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:background="@android:color/white" />
+            android:background="@color/colorBlue" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:orientation="horizontal"
             android:weightSum="4"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:layout_height="50dp">
 
             <Button
-                android:id="@+id/burgerButton"
+                android:id="@+id/btn_red"
+                android:layout_width="96dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/ic_hamburger"
-                android:layout_width="@dimen/box_size"
-                android:layout_height="@dimen/box_size"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginBottom="40dp" />
-            <!--android:layout_width="100sp"
-            android:layout_height="100sp" -->
-
+                android:background="@color/colorRed"
+                android:enabled="false" />
 
             <Button
-                android:id="@+id/lettuceButton"
+                android:id="@+id/btn_green"
+                android:layout_width="96dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/ic_lettuce"
-                android:layout_width="@dimen/box_size"
-                android:layout_height="@dimen/box_size"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginBottom="40dp" />
-
+                android:background="@color/colorGreen"
+                android:onClick="onGreenPressed"
+                android:enabled="false" />
 
             <Button
-                android:id="@+id/eggButton"
+                android:id="@+id/btn_beige"
+                android:layout_width="96dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/ic_fried_egg"
-                android:layout_width="@dimen/box_size"
-                android:layout_height="@dimen/box_size"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginBottom="40dp" />
+                android:background="@color/colorBeige"
+                android:onClick="onBeigePressed"
+                android:enabled="false" />
 
             <Button
-                android:id="@+id/cupcakeButton"
+                android:id="@+id/btn_yellow"
+                android:layout_width="96dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/ic_cupcake"
-                android:scaleType="centerInside"
-                android:adjustViewBounds="true"
-                android:layout_width="@dimen/box_size"
-                android:layout_height="@dimen/box_size"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginBottom="40dp" />
+                android:background="@color/colorYellow"
+                android:onClick="onYellowPressed"
+                android:enabled="false" />
         </LinearLayout>
 
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_start_game"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/grey_button_style"
-        android:padding="20dp"
-        android:text="Start Game!"
-        android:textColor="@color/common_google_signin_btn_text_light_default"
-        android:textSize="60sp"
-        android:layout_below="@+id/textview_instructions"
-        android:layout_centerHorizontal="true" />
-
     <TextView
         android:id="@+id/textview_instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="284dp"
-        android:text="Hit the icon you see as fast as you can"
+        android:text="Hit the color you see as fast as you can!"
         android:textColor="@color/common_google_signin_btn_text_light_focused"
-        android:textSize="40sp"
+        android:textSize="10sp"
+        android:layout_marginTop="50dp"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/btn_start_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_style"
+        android:padding="10dp"
+        android:text="Start Game!"
+        android:textColor="#ffffff"
+        android:textSize="15sp"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
