--- a/app/src/main/res/layout/activity_pokemon.xml
+++ b/app/src/main/res/layout/activity_pokemon.xml
@@ -104,7 +104,7 @@
             android:layout_width="wrap_content"
             android:orientation="horizontal"
             android:weightSum="4"
-            android:layout_height="100dp">
+            android:layout_height="90dp">
 
             <Button
                 android:id="@+id/bullbasurButton"
@@ -165,9 +165,9 @@
         android:layout_marginTop="149dp"
         android:text="Hit the pokemon you see as fast as you can!"
         android:textColor="@color/common_google_signin_btn_text_light_focused"
-        android:textSize="18sp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="15sp" />
 
 </RelativeLayout>
 
